# layout_siamesa_v2

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ablation_noreflow.yaml  dataset_indt.yaml  default.yaml  default_plus.yaml  plus_L_reg4.yaml  plus_fold_L_reg4.yaml  robust_synthonly.yaml
data/: fold_plan.csv
docs/: AUDITORIA_PROCESSED_V3_TREINO_TESTE.md  COMPARACAO_KNN_TRIPLET.md  DESIGN.md  MODEL_CARD.md  PLANO_ACAO_OVERFITTING.md  RELATORIO_APRESENTACAO.md  RELATORIO_FINAL_PROCESSED_V3.md  RELATORIO_FOLDABLE.md  RELATORIO_TWO_STAGE_DECISION.md  ROADMAP.md  ROTEIRO_PIPELINE_EXECUTIVO.md  SPEC_COLETA_FOLDABLE.md  pipeline.mmd  pipeline_executivo.mmd  pipeline_v2.mmd  pipeline_v3.mmd  pipeline_v4.mmd  results_comparison.tex  slides_pipeline_executivo.md
scripts/: ablation.py  audit_dataset.py  audit_red_marks.py  audit_reflow.py  build_dataset_indt.py  build_splits.py  capture_foldable.py  compare_backbones.py  compare_methods.py  compare_preprocess.py  domain_slice_eval.py  draw_architecture_figure.py  draw_embedding_concept.py  draw_stage2_confusion.py  draw_stage2_mechanism.py  draw_two_stage_decision.py  dump_synthetic.py  evaluate.py  export_processed.py  extract_features.py  fetch_clean_extra.py  foldable_operating_point.py  grid_search.py  localize.py  make_synthetic.py  merge_clean_extra.py  multiseed_stability.py  nested_cv.py  package_dataset.py  predict.py  rebuild_dataset_indt.py  rebuild_processed_v3.py  report_processed_v3.py  resolution_probe.py  run_experiment.py  stage2_baseline.py  train.py  visualize.py  visualize_test.py
(+116 files in other folders)
