[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "siamese-ui-error"
version = "0.1.0"
description = "Rede siamesa sobre DINOv2 ViT-S/14 para deteccao binaria de erro de layout em screenshots de UI"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "timm>=1.0",
    "scikit-learn>=1.3",
    "scipy",
    "pillow",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly",
    "umap-learn",
    "tqdm",
    "pyyaml",
    "safetensors",
    "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["src"]
